--- a/SystemKontroliFirmySpedycyjnej/Areas/TransportCompany/Views/Shared/_Layout.cshtml
+++ b/SystemKontroliFirmySpedycyjnej/Areas/TransportCompany/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             <button class="button-style" onclick="location.href='@Url.Action("EmployeeInfo", "Employee", new { area = "TransportCompany" })'">Employee</button>
         </div>
         <div class="position-button">
-            <button class="button-style" onclick="location.href='@Url.Action("EmployeeInfo", "Employee", new { area = "TransportCompany" })'">Home</button>
+            <button class="button-style" onclick="location.href='@Url.Action("EmployeeSection", "EmployeeSection", new { area = "TransportCompany" })'">Company departaments</button>
         </div>
     </div>
     @RenderBody()
