--- a/SystemKontroliFirmySpedycyjnej/Areas/TransportCompany/Views/EmployeeSection/EmployeeSection.cshtml
+++ b/SystemKontroliFirmySpedycyjnej/Areas/TransportCompany/Views/EmployeeSection/EmployeeSection.cshtml
@@ -34,7 +34,16 @@
         margin-bottom:1px;
         margin-left:4px;
     }
+    .text-info {
+        position: absolute;
+        left: 20px;
+        top: 20px;
+        color: #178fe5;
+        font-size: 24px;
+        font-weight: bold;
+    }
 </style>
+<div class="text-info">@ViewData["data"]</div>
 <div class="main">
     @foreach (var item in Model)
     {
